[package]
name = "fossim-backend"
version = "0.1.0"
authors = ["Aman Khanna (nekename)"]
license = "GPL-3.0-or-later"
edition = "2024"

[dependencies]
dotenvy = "0.15"
rocket = { version = "0.5", features = ["json"] }
rocket_cors = { version = "0.6", default-features = false }
serde = { version = "1.0", features = ["derive"] }
